// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches the button-branch snapshot 1`] = `
<div
  class="personal-dashboard-focused-header"
>
  <!--
			A focused whole-page render has no dashboard behind it to close back
			onto, so there the arrow is a real link that loads one, the same link
			the server puts in a focused module's header.
		-->
  <button
    aria-label="⧼personal-dashboard-back-to-dashboard⧽"
    class="cdx-button cdx-button--action-default cdx-button--weight-quiet cdx-button--size-medium cdx-button--icon-only"
  >
    
    <span
      class="cdx-icon cdx-icon--medium"
    >
      <svg
        aria-hidden="true"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <!--v-if-->
        <g>
          <path
            d="M8.124 5.335 4.077 9.5H18v2H4.07l4.054 4.188-1.437 1.391L1 11.196V9.804L6.69 3.94l1.434 1.394Z"
          />
        </g>
      </svg>
    </span>
    
  </button>
  <div
    class="personal-dashboard-focused-header__title-group"
  >
    <h2
      class="personal-dashboard-focused-header__title"
    >
      Some Module
    </h2>
  </div>
</div>
`;

exports[`matches the link-branch snapshot 1`] = `
<div
  class="personal-dashboard-focused-header"
>
  <!--
			A focused whole-page render has no dashboard behind it to close back
			onto, so there the arrow is a real link that loads one, the same link
			the server puts in a focused module's header.
		-->
  <a
    aria-label="⧼personal-dashboard-back-to-dashboard⧽"
    class="cdx-button cdx-button--fake-button cdx-button--fake-button--enabled cdx-button--weight-quiet cdx-button--icon-only"
    href="/wiki/Special:PersonalDashboard"
  >
    <span
      class="cdx-icon cdx-icon--medium"
    >
      <svg
        aria-hidden="true"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <!--v-if-->
        <g>
          <path
            d="M8.124 5.335 4.077 9.5H18v2H4.07l4.054 4.188-1.437 1.391L1 11.196V9.804L6.69 3.94l1.434 1.394Z"
          />
        </g>
      </svg>
    </span>
  </a>
  <div
    class="personal-dashboard-focused-header__title-group"
  >
    <h2
      class="personal-dashboard-focused-header__title"
    >
      Some Module
    </h2>
  </div>
</div>
`;
